# f1r3fly-rgb-wallet

./: .env.example  .gitignore  Cargo.toml  README.md  test_cli.sh
.github/workflows/: test.yml
ci/: Dockerfile.electrs  docker-compose.yml
ci/conf/: logback.xml  standalone.conf
ci/genesis/: bonds.txt  wallets.txt
ci/scripts/: collect-logs.sh  wait-for-services.sh
src/: config.rs  lib.rs  main.rs  manager.rs  types.rs
src/bitcoin/: balance.rs  mod.rs  network.rs  sync.rs  utxo.rs  wallet.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: bitcoin.rs  config.rs  invoice.rs  mod.rs  rgb.rs  transfer.rs  wallet.rs
src/f1r3fly/: asset.rs  balance.rs  consignment.rs  contracts.rs  executor.rs  invoice.rs  mod.rs  transfer.rs
src/storage/: claim_storage.rs  file_system.rs  keys.rs  mod.rs  models.rs
tests/: bitcoin_integration_tests.rs  byte_order_test.rs  claim_storage_test.rs  cli_integration_test.rs  f1r3fly_integration_tests.rs  keys_test.rs  list_utxos_integration_test.rs  storage_test.rs
tests/bitcoin/: balance_test.rs  cli_flow_test.rs  manager_test.rs  mod.rs  network_sync_test.rs  send_test.rs  utxo_test.rs  wallet_test.rs
tests/common/: mod.rs
tests/f1r3fly/: asset_issuance_test.rs  balance_queries_test.rs  claim_flow_test.rs  complete_transfer_test.rs  genesis_consignment_test.rs  invoice_operations_test.rs  mod.rs  multi_transfer_chain_test.rs  opreturn_transfer_test.rs  utxo_discovery_timing_test.rs  validation_security_test.rs  wallet_state_persistence_test.rs
