[package]
name = "f1r3fly-rgb-wallet"
version = "0.1.0"
edition = "2021"
authors = ["F1r3fly RGB Contributors"]
description = "F1r3fly-RGB wallet implementation"
license = "Apache-2.0"

[[bin]]
name = "f1r3fly-rgb-wallet"
path = "src/main.rs"

[dependencies]
# F1r3fly-RGB
f1r3fly-rgb = { git = "https://github.com/spreston8/f1r3fly-rgb", branch = "master" }
node_cli = { git = "https://github.com/F1R3FLY-io/rust-client", branch = "rgb" }

# RGB / Bitcoin primitives
amplify = "4.8"
bp-core = "0.12.0-rc.3"
bp-std = "0.12.0-rc.3"
strict_types = "2.7.0"
hypersonic = "0.12.0"
rgb-std = { version = "0.12.0-rc.3", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Key management
bip39 = "2.0"
bitcoin = "0.32.7"
secp256k1 = { version = "0.28", features = ["rand-std"] }

# Bitcoin wallet (BDK)
bdk_wallet = { version = "2.2", features = ["keys-bip39", "rusqlite"] }
bdk_esplora = { version = "0.22", features = ["blocking"] }

# Database (for claim storage) - version must match BDK's rusqlite dependency
rusqlite = "0.31"

# Encryption
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"

# Utilities
hex = "0.4"
thiserror = "1.0"
dirs = "5.0"                                       # For home directory path
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"                                # Logger initialization for RUST_LOG
tokio = { version = "1", features = ["rt"] }
dotenv = "0.15"                                    # Load .env files

# Signature generation for secured contract methods
blake2 = "0.10"
prost = "0.12"

[dev-dependencies]
tempfile = "3.8"
uuid = { version = "1.11", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
env_logger = "0.11"
dotenv = "0.15"
